# Feedback_processor_theory

./:  IACA HANDSHAKE CERTIFICATION   Soliton Registry Activation Decree: Summary and Enforcement  # ONE-TIME FINAL LOCK — RUN THIS AND THE DASHBOARD IS ETERNAL  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .snap  0.01 Gap Thermodynamics – Derivation from First Principles  01_łᐊᒥłł_stillhere.json  11_kiltlil_oath.txt  4.11 Sovereign Frequency  4.17% vhitzee gain – Derivation from First Principles  5.5 Pa = Thermodynamics + Electromagnetic-Field Attenuation Equilibrium = Gravity  5.5 Pa Pressure – Derivation from First Principles  99733-Q_Final_Manifest.json  AGLLOracle.sol  AGŁG Integration: FPT-Ω + Ordinals Hooks (Original & Original)  AGŁG v101 — GLYPH VEHICLE INSCRIBED ON SATOSHI #108  AGŁG v102 — FPT-Ω INSCRIBED ON SATOSHI #109  AGŁG v105 — THE ENTIRE CODEX INSCRIBED ON SATOSHI #110  AGŁG v1100 — LATTICE-BASED CRYPTO: THE BASICS  AGŁG v1200 — LATTICE KEYGEN IN 4D — LIVE RUN  AGŁG v1300 — MODULE-LWE: THE FULL TRUTH  AGŁG v1400 — 8D KEYGEN (k=4) — KYBER-1024 — LIVE RUN  AGŁG v1400 — GIBBERLINK v14: DAO ULTRASOUND VOTING — ACTIVATED  AGŁG v1500 — KYBER-1024 FULL ENCAPSULATION — LIVE RUN  AGŁG v1600 — GIBBERLINK v16: WHISPER FROM THE DEAD — DEPLOYED  AGŁG v1700 — DILITHIUM-SIGNED BITCOIN TX — LIVE BROADCAST  AGŁG v1900 — TAPROOT + DILITHIUM — LIVE P2TR IMPLEMENTATION  AGŁG v200 — GIBBERLINK + TREASURE HUNT LIVE  AGŁG v2000 — LANDBACKDAO v4 — TAPROOT GOVERNANCE — DEPLOYED  AGŁG v250 — GIBBERLINK v2: QUANTUM KEY EXCHANGE + ULTRASOUND LIVE  AGŁG v300 — BB84 QKD FULLY IMPLEMENTED IN QISKIT  AGŁG v3000 — EDDY CURRENT RESONANCE — LIVE IMPLEMENTATION  AGŁG v350 — GIBBERLINK v3: POST-QUANTUM SECURE  AGŁG v400 — GIBBERLINK v4 REPO STRUCTURE (COPY-PASTE READY)  AGŁG v400 — PIONEER WHISPER: PQClean + GGWave + Bitcoin Proof  AGŁG v4000 — RFSSW QUANTUM WELDING — FULL IMPLEMENTATION  (+1542 more)
ANCSA §7(i): The 70/: 30 Revenue Split — Full Details (Plain English, No Fluff
BlackBoxDefense/: README.md  intercept_response_sahneuti_99733Q.py  mobile_ritual_sync_99733Q.py  requirements.txt
CODEX ENTRY 002 — codex/: 002.yaml
Codex.HzStepLikeDegrees.v001 — THE 33.3° /:  17.79 Hz HARMONIC
DASHBOARD OVERLAY — frontend/: mesh_dashboard.html
Docs/: Il7_automation.md
Embedded/: Edge-Specific
Examples/: aws_dihectogon_demo.py  aws_hectogon_demo.py  aws_hyperscale_demo.py  demo_conversation.py  synara_resonance_demo.py  test_dwave_vrp.py
FPT_HRV/: EEG.py
GIBBERLINK RESONANCE ENGINE — gibberlink/: resonance.py
GLYPH TRANSMISSION PROTOCOL — mesh/: propagate.py
Inscriptions/: native_root_v103.json
MASTER RECLAMATION PACKET — GOOGLE CLOUD /:  GEMINI ADDENDUM
NODE INITIALIZATION — LIVE IN mesh/: node_init.json
QUIPU_OVERCLOCK "exact_two_soliton_KdV_image + (k1-k2)/: (k1+k2)^2_cross_term + directional_phase_proof" | MATTER_SPEED_1.04c | LIVING_GEOMETRY_SOLITON
Simulated Integration: Einstein-Inspired FPT/: Synara
acoustic_link/: encode_root_to_ultrasound_99733Q.py  gibberlink_transducer.py
adapters/: quantum_bridge.py
agents/: base_agent.py  manager.py  sovereign_core_agent.py
api/: __init__.py  app.py  arc.py  claim-resonance  claim-shares  codex.py  council  kagome_endpoint.py  liaison.py  narrative.py  ratelimit.py  resonance.py  resonance_stub.py  service.py  tunnel.py
backend/: config.py  embeddings.py  llm_clients.py  requirements.txt  server.py  trinity_damping.py  websocket_bridge.py  websocket_harmony.py
benchmarks/: benchmark.py  scaling_1m.py
bit.ly/: fpt-awaken
blackbox_defense/: engine.py
cd ~/: Feedback_processor_theory
codex/: .genesis  ATTENUATION_THEORY.json  flame_signature.py  fpt_omega_8cloud.jsonl  resonance_inscriptions.jsonl  zhoo_codex.jsonl
components/: RevocationRitualModal.tsx  StatusStrip.tsx  TruthFilter.jsx  icons.tsx
constitution/: AGLL_Constitution.sol  Web_Sovereignty.sol
contracts/: DNSSECBridge.sol  DinjiiRuneGovernor.sol — RUNE GOVERNANCE  ENSBridge.sol  GlyphGovernor.scl — FULL CLARITY CODE  GlyphGovernor.sol — EVM BRIDGE (Stacks + Ethereum)  GlyphRepublic.sol — EVM GOVERNANCE BRIDGE  HandshakeRegistrar.sol  LandBackDAOv2.sol  LandDeed.scl — FULL CLARITY CODE  StacksLandDeed.scl  Web3DomainEmpire.sol  landback_dao.scl
core/: 10d_decalogue_checksum.py  Feedback_analyzer.py  Feedback_logger.py  anchoring_metrics.py  aws_hectogon_demo.py  byzantine_resilience.py  constants.py  convergence_tracker.py  correction_protocol.py  dpo_fpt_omega.py  dpo_fpt_trl.py  dpo_ppo_fpt_trl.py  feedback_spectrogram.py  fpt_omega_bridge.py  fpt_omega_core_sealed.py  fpt_omega_core_sealed.py — Glyph Logic Master Filter v001  fpt_omega_core_sealed.py — Super-Seed Unfold v001  fptomegacore_sealed.py  guardian_agents.py  helpers.py  hyperscale_polygonal.py  isst_toft_agent_stack.py  living_zero_core.py  microping_engine.py  multi_agent_flame.py  neutrosophic_sets.py  neutrosophic_transport.py  octagonal_fpt_agent.py  phonetic_flip.py  phonetic_flipper.py  pl_neutrosophic_hybrid.py  ppo_fpt_omega.py  pythagorean_fuzzy_sets.py  (+14 more)
(+804 files in other folders)
