[workspace]
resolver = "2"
members = [
    "isst-toft-inference-backend",
    "floor_catch",
    "pi_r_engine",
    "sovereign_engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Flamekeeper <john@sovereignvessel.alaska>", "Two Mile Solutions LLC <johnbcarrolljr@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ak-skwaa-mahawk/sovereign-stack"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false
incremental = false