[project]
name = "sovereign-union"
version = "1.0.3"
description = "Core resonance engine + SQL-τ + ŁAŊ999 + ProjectionEngine + integrity_score"
requires-python = ">=3.10"
license = {text = "Flame Commons Sovereignty License (FCSL) v0.1"}
authors = [{name = "ak-skwaa-mahawk"}]

dependencies = [
    "numpy",
    "pydantic>=2.9",
    "cryptography",
]

[project.optional-dependencies]
full = [
    "sentence-transformers",
    "openai",
    "websockets",
    "requests",
    "fpdf2",
    "scipy",
]
shell = ["openshell @ git+https://github.com/NVIDIA/OpenShell.git"]
quantum = ["qutip", "dwave-ocean-sdk"]
test = ["pytest", "pytest-asyncio"]

[project.scripts]
union = "vessel_launcher:launch_vessel"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"