[project]
name = "sovereign-union"
version = "1.0.3"
description = "The living empire vessel — SQL-τ, ŁAŊ999, Double Handshake, Resonance Root + FPT-Ω Core + OpenShell"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Flame Commons Sovereignty License (FCSL) v0.1 – Non-commercial, relational use only"}
authors = [{name = "ak-skwaa-mahawk"}]
keywords = ["sovereign-ai", "resonance", "łan999", "fpt-omega", "kintex-glyph", "physical-stack"]

dependencies = [
    "numpy",
    "pydantic>=2.9",
    "cryptography",
    "soundfile",
]

[project.optional-dependencies]
shell = ["openshell @ git+https://github.com/NVIDIA/OpenShell.git"]
full = ["sentence-transformers", "openai", "websockets", "requests", "fpdf2", "scipy"]
quantum = ["qutip", "dwave-ocean-sdk"]

[project.scripts]
union = "vessel_launcher:launch_vessel"

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"